# apple-platform-rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Justfile  README.md  release.toml
apfs-cli/: CHANGELOG.md  Cargo.toml  README.md
apfs-cli/src/: main.rs
apfs-core/: CHANGELOG.md  Cargo.toml  README.md
apfs-core/src/: block.rs  btree.rs  error.rs  filesystem.rs  lib.rs  object_map.rs  space_manager.rs
apfs-core/src/read/: container.rs  file_extent.rs  filesystem.rs  mod.rs  volume.rs
apfs-core/src/write/: block.rs  mod.rs  space_manager.rs
apfs-derive/: CHANGELOG.md  Cargo.toml  README.md
apfs-derive/src/: lib.rs
apfs-types/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
apfs-types/src/: btree.rs  common.rs  container.rs  data_stream.rs  efi_jumpstart.rs  encryption.rs  encryption_rolling.rs  filesystem.rs  filesystem_extended_fields.rs  fusion.rs  lib.rs  object.rs  object_map.rs  pod.rs  reaper.rs  sealed_volume.rs  sibling.rs  snapshot.rs  space_manager.rs  volume.rs
app-store-connect/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
app-store-connect/src/: api_key.rs  api_token.rs  bundle_api.rs  certs_api.rs  cli.rs  device_api.rs  lib.rs  main.rs  notary_api.rs  profile_api.rs
apple-bom/: CHANGELOG.md  Cargo.toml  README.md
apple-bom/src/: builder.rs  dumpbom.rs  error.rs  format.rs  lib.rs  path.rs
apple-bom/src/testdata/: python-applications.bom
apple-bundles/: CHANGELOG.md  Cargo.toml  README.md
apple-bundles/src/: directory_bundle.rs  lib.rs  macos_application_bundle.rs
apple-codesign/: CHANGELOG.md  CHANGELOG.rst  Cargo.toml  README.md
apple-codesign/docs/: apple_codesign.rst  apple_codesign_certificate_management.rst  apple_codesign_custom_assessment_policies.rst  apple_codesign_debugging.rst  apple_codesign_developer_guide.rst  apple_codesign_getting_started.rst  apple_codesign_github_actions.rst  apple_codesign_pkcs11.rst  apple_codesign_quirks.rst  apple_codesign_rcodesign.rst  apple_codesign_rcodesign_config_files.rst  apple_codesign_rcodesign_notarizing.rst  apple_codesign_rcodesign_signing.rst  apple_codesign_remote_signing.rst  apple_codesign_remote_signing_design.rst  apple_codesign_settings_scope.rst  apple_codesign_smartcard.rst
apple-codesign/src/: apple_certificates.rs  aws_kms.rs  bundle_signing.rs  certificate.rs  cli.rs  code_directory.rs  code_requirement.rs  code_resources.rs  cryptography.rs  dmg.rs  embedded_signature.rs  embedded_signature_builder.rs  entitlements.rs  environment_constraints.rs  error.rs  lib.rs  macho.rs  macho_builder.rs  macho_signing.rs  macho_universal.rs  macos.rs  main.rs  notarization.rs  pkcs11.rs  plist_der.rs  policy.rs  reader.rs  signing.rs  signing_settings.rs  stapling.rs  ticket_lookup.rs  verify.rs  windows.rs  yubikey.rs
apple-codesign/src/app_store_connect/: api_token.rs
apple-codesign/src/apple-certs/: AppleApplicationIntegrationCA7G1.cer
apple-codesign/src/cli/: certificate_source.rs  config.rs  debug_commands.rs  extract_commands.rs  mod.rs
apple-codesign/src/cli_codesign/: identity.rs  mod.rs  op_display.rs  op_hosting.rs  op_sign.rs  op_validate_constraint.rs  op_verify.rs  options.rs  parser.rs  requirements.rs
apple-codesign/src/remote_signing/: mod.rs  session_negotiation.rs
apple-codesign/src/testdata/: apple-signed-developer-id-application.pem  self-signed-ed25519-apple-development.p12  self-signed-ed25519-apple-development.pem  self-signed-ed25519-apple-distribution.p12  self-signed-ed25519-apple-distribution.pem  self-signed-ed25519-developer-id-application.p12  self-signed-ed25519-developer-id-application.pem  self-signed-ed25519-developer-id-installer.p12  self-signed-ed25519-developer-id-installer.pem  self-signed-ed25519-mac-installer-distribution.p12  self-signed-ed25519-mac-installer-distribution.pem  self-signed-rsa-apple-development.p12  self-signed-rsa-apple-development.pem  self-signed-rsa-apple-distribution.p12  self-signed-rsa-apple-distribution.pem  self-signed-rsa-developer-id-application.p12  self-signed-rsa-developer-id-application.pem  self-signed-rsa-developer-id-application2.pem  self-signed-rsa-developer-id-installer.p12  self-signed-rsa-developer-id-installer.pem  self-signed-rsa-mac-installer-distribution.p12  self-signed-rsa-mac-installer-distribution.pem
apple-codesign/tests/: cli_tests.rs  codesign_compat.rs
apple-codesign/tests/cmd/: analyze-certificate.trycmd  codesign-sign-bundle.trycmd  codesign-sign-code-requirements.trycmd  codesign-sign-entitlements.trycmd  codesign-sign-macho-universal.trycmd  compute-code-hashes.trycmd  debug-create-macho.trycmd  diff-signatures.trycmd  encode-app-store-connect-api-key.trycmd  extract.trycmd  generate-csr.trycmd  generate-self-signed-cert.trycmd  help.trycmd  keychain-export-certificate-chain.trycmd  keychain-print-certificates.trycmd  macho-universal-create.trycmd  notary-log.trycmd  notary-submit.trycmd  notary-wait.trycmd  parse-code-signing-requirement.trycmd  print-signature-info.trycmd  remote-sign.trycmd  sign-binary-identifier.trycmd  sign-bundle-dsym.trycmd  sign-bundle-electron.trycmd  sign-bundle-exclude.trycmd  sign-bundle-framework-shallow.trycmd  sign-bundle-framework.trycmd  sign-bundle-macho-universal.trycmd  sign-bundle-multiple-macho.trycmd  sign-cms.trycmd  (+27 more)
apple-device-tree/: Cargo.toml
apple-device-tree/examples/: dtb-parse.rs
apple-device-tree/src/: deserialize.rs  lib.rs  serialize.rs
apple-device-tree/tests/: rpi.dtb  test.rs
apple-dmg/: CHANGELOG.md  Cargo.toml
apple-dmg/assets/: example.dmg
apple-dmg/src/: blkx.rs  koly.rs  lib.rs  xml.rs
apple-flat-package/: CHANGELOG.md  Cargo.toml
apple-flat-package/src/: distribution.rs  lib.rs  package_info.rs  reader.rs  testdata-zoom-distribution.xml
apple-sdk/: CHANGELOG.md  CHANGELOG.rst  Cargo.toml  README.md
apple-sdk/src/: data.rs  lib.rs  parsed_sdk.rs  search.rs  simple_sdk.rs
apple-xar/: CHANGELOG.md  Cargo.toml
apple-xar/src/: format.rs  lib.rs  reader.rs  table_of_contents.rs  testdata-zoom-toc.xml
cpio-archive/: CHANGELOG.md  Cargo.toml
cpio-archive/src/: lib.rs  newc.rs  odc.rs
(+13 files in other folders)
