[package]
name = "apfs-core"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
description = "Apple File System (APFS) core data structures"
keywords = ["apple", "apfs", "filesystem"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"

[dependencies]
bitflags = "2.6.0"
bit-vec = "0.8.0"
bytes = "1.8.0"
log = "0.4.22"
num_enum = "0.7.3"
thiserror = "1.0.67"
xattr = "1.3.1"

[dependencies.apfs-types]
path = "../apfs-types"
version = "0.1.0"
features = ["std"]

[features]
