[package]
name = "apfs-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
description = "Apple File System (APFS) support macros"
keywords = ["apple", "apfs", "filesystem"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"

[lib]
proc-macro = true

[dependencies]
indoc = "2.0.4"
proc-macro2 = "1.0.76"
syn = { version = "2.0.48", features = ["extra-traits", "full"] }
quote = "1.0.35"
