[package]
name = "apfs-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
description = "Apple File System (APFS) data structures and constants"
keywords = ["apple", "apfs", "filesystem"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"

[dependencies]
bitflags = "2.9.2"
bytes = { version = "1.10.1", optional = true, default-features = false }
chrono = { version = "0.4.41", default-features = false }
num_enum = { version = "0.7.4", features = ["complex-expressions"] }
thiserror = "2.0.15"

[dependencies.apfs-derive]
path = "../apfs-derive"
version = "0.1.0"
optional = true

[features]
default = ["derive"]
derive = ["dep:bytes", "dep:apfs-derive"]
std = []
