[package]
name = "app-store-connect"
version = "0.6.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0 OR MIT"
description = "Apple App Store Connect API and client"
keywords = ["apple"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.92"
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
log = "0.4.22"
pem = "3.0.4"
rand = "0.8.5"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "http2", "json", "rustls-tls-native-roots"] }
rsa = "0.9.6"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.67"
x509-certificate = "0.24.0"
