[package]
name = "app-store-connect"
version = "0.7.0"
edition = "2021"
rust-version = "1.86"
license = "Apache-2.0 OR MIT"
description = "Apple App Store Connect API and client"
keywords = ["apple"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.27"
pem = "3.0.5"
rand = "0.9.2"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "http2", "json", "rustls-tls-native-roots"] }
rsa = "0.9.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
x509-certificate = "0.25.0"
