[package]
name = "app-store-connect"
version = "0.7.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0 OR MIT"
description = "Apple App Store Connect API and client"
keywords = ["apple"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
log = "0.4.29"
pem = "3.0.6"
rand = "0.8.5"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "http2", "json", "rustls-tls-native-roots"] }
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
x509-certificate = "0.25.0"
