[package]
name = "apple-bom"
version = "0.3.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
description = "Apple Bill of Materials (BOM) data format"
keywords = ["bom", "apple", "macos", "pkg"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"
readme = "README.md"

[[bin]]
name = "odumpbom"
path = "src/dumpbom.rs"

[dependencies]
clap = "4.5.21"
chrono = "0.4.38"
crc32fast = "1.4.2"
hex = "0.4.3"
scroll = { version = "0.12.0", features = ["derive"] }
simple-file-manifest = "0.11.0"
thiserror = "2.0.3"
