[package]
name = "apple-bundles"
version = "0.19.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
rust-version = "1.70"
license = "MPL-2.0"
description = "Interface with Apple bundle primitives"
keywords = ["apple", "macos", "bundle", "appbundle"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.79"
plist = "1.6.0"
simple-file-manifest = "0.11.0"
walkdir = "2.4.0"

[dev-dependencies]
tempfile = "3.9.0"
