[package]
name = "apple-codesign"
version = "0.29.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
rust-version = "1.86"
license = "MPL-2.0"
description = "Pure Rust interface to code signing on Apple platforms"
keywords = ["apple", "macos", "codesign"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"
readme = "README.md"

[[bin]]
name = "rcodesign"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
aws-config = { version = "1.8.5", optional = true }
aws-sdk-s3 = { version = "1.103.0", optional = true }
aws-smithy-http = { version = "0.62.3", optional = true }
aws-smithy-types = { version = "1.3.2", optional = true }
base64 = "0.22.1"
bcder = "0.7.5"
bitflags = "2.9.2"
bytes = "1.10.1"
clap = { version = "4.5.45", features = ["derive"] }
chrono = "0.4.41"
cryptographic-message-syntax = "0.28.0"
der = { version = "0.7.10", features = ["alloc"] }
dialoguer = "0.11.0"
difference = "2.0.0"
digest = "0.10.7"
dirs = "5.0.1"
elliptic-curve = { version = "0.13.8", features = ["arithmetic", "pkcs8"] }
env_logger = "0.11.8"
figment = { version = "0.10.19", features = ["env", "toml"] }
filetime = "0.2.25"
glob = "0.3.3"
goblin = "0.9.3"
hex = "0.4.3"
log = "0.4.27"
md-5 = "0.10.6"
minicbor = { version = "0.25.1", features = ["derive", "std"] }
num-traits = "0.2.19"
object = { version = "0.37.3", features = ["write"] }
oid-registry = "0.7.1"
once_cell = "1.21.3"
p12 = "0.6.3"
p256 = { version = "0.13.2", default-features = false, features = ["arithmetic", "pkcs8", "std"] }
pem = "3.0.5"
pkcs1 = { version = "0.7.5", features = ["alloc", "std", "pkcs8"] }
pkcs8 = { version = "0.10.2", features = ["alloc", "std"] }
plist = "1.7.4"
rand = "0.8.5"
rasn = "0.20.2"
rayon = "1.11.0"
regex = "1.11.1"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "http2", "json", "rustls-tls-native-roots"] }
ring = "0.17.14"
rsa = "0.9.8"
scroll = "0.12.0"
sha2 = "0.10.9"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
signature = { version = "2.2.0", features = ["std"] }
simple-file-manifest = "0.11.0"
spake2 = "0.4.0"
spki = { version = "0.7.3", features = ["pem"] }
subtle = "2.6.1"
tempfile = "3.20.0"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["rt"] }
tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
uuid = { version = "1.18.0", features = ["v4"] }
walkdir = "2.5.0"
x509 = "0.2.0"
x509-certificate = "0.25.0"
xml-rs = "0.8.27"
yasna = "0.5.2"
yubikey = { version = "0.8.0", optional = true, features = ["untested"] }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
zip_structs = "0.2.1"

[dependencies.app-store-connect]
path = "../app-store-connect"
version = "0.7.0"
optional = true

[dependencies.apple-bundles]
path = "../apple-bundles"
version = "0.21.0"

[dependencies.apple-flat-package]
path = "../apple-flat-package"
version = "0.20.0"

[dependencies.apple-xar]
path = "../apple-xar"
version = "0.20.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "2.11.1", features = ["OSX_10_12"] }
security-framework-sys = { version = "2.14.0", features = ["OSX_10_12"] }

[target.'cfg(target_os = "windows")'.dependencies]
widestring = { version = "1.2.0" }
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[dev-dependencies]
flate2 = "1.1.2"
indoc = "2.0.6"
simple-file-manifest = "0.11.0"
tar = "0.4.44"
trycmd-indygreg-fork = "0.14.20"
zip = { version = "2.4.2", default-features = false }

[features]
default = ["notarize"]
notarize = [
    "app-store-connect",
    "aws-config",
    "aws-sdk-s3",
    "aws-smithy-http",
    "aws-smithy-types",
]
smartcard = ["yubikey"]
