[package]
name = "apple-dmg"
version = "0.4.0"
edition = "2021"
rust-version = "1.70"
description = "Library for reading and writing dmg images."
repository = "https://github.com/indygreg/apple-platform-rs"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.79"
byteorder = "1.5.0"
crc32fast = "1.3.2"
fatfs = "0.3.6"
flate2 = "1.0.28"
fscommon = "0.1.1"
getrandom = "0.2.12"
gpt = "3.1.0"
md5 = "0.7.0"
plist = "1.6.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_bytes = "0.11.14"
