[package]
name = "apple-flat-package"
version = "0.18.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
rust-version = "1.70"
license = "MPL-2.0"
description = "Apple flat package (.pkg) format handling"
keywords = ["apple", "flat-package", "pkgbuild", "pkg", "productbuild"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"
readme = "README.md"

[dependencies]
flate2 = "1.0.28"
scroll = { version ="0.12.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"

[dependencies.apple-xar]
path = "../apple-xar"
version = "0.18.0"

[dependencies.cpio-archive]
path = "../cpio-archive"
version = "0.9.0"
