[package]
name = "apple-flat-package"
version = "0.20.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
rust-version = "1.86"
license = "MPL-2.0"
description = "Apple flat package (.pkg) format handling"
keywords = ["apple", "flat-package", "pkgbuild", "pkg", "productbuild"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"
readme = "README.md"

[dependencies]
flate2 = "1.1.2"
scroll = { version = "0.13.0", features = ["derive"] }
serde-xml-rs = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.15"

[dependencies.apple-xar]
path = "../apple-xar"
version = "0.20.0"

[dependencies.cpio-archive]
path = "../cpio-archive"
version = "0.10.0"
