[package]
name = "apple-sdk"
version = "0.1.0-pre"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
description = "Interact with Apple SDKs"
keywords = ["apple"]
homepage = "https://github.com/indygreg/toolchain-tools"
repository = "https://github.com/indygreg/toolchain-tools.git"

[dependencies]
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
plist = { version = "1.3", optional = true }

[features]
default = []
parse = ["plist", "serde_json", "serde"]

[package.metadata.docs.rs]
all-features = true
