[package]
name = "apple-sdk"
version = "0.5.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
description = "Interact with Apple SDKs"
keywords = ["apple"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"

[dependencies]
serde_json = { version = "1.0.111", optional = true }
serde = { version = "1.0.195", optional = true, features = ["derive"] }
plist = { version = "1.6.0", optional = true }

[features]
default = ["parse"]
parse = ["plist", "serde_json", "serde"]
