[package]
name = "apple-xar"
version = "0.18.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
rust-version = "1.70"
license = "MPL-2.0"
description = "XAR archive reading and writing"
keywords = ["apple", "xar"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"
readme = "README.md"

[dependencies]
base64 = "0.21.7"
bcder = { version = "0.7.4", optional = true }
bzip2 = "0.4.4"
chrono = { version = "0.4.31", features = ["serde"] }
cryptographic-message-syntax = { version = "0.26.0", optional = true }
digest = "0.10.7"
log = "0.4.20"
md-5 = "0.10.6"
flate2 = "1.0.28"
rand = { version = "0.8.5", optional = true }
reqwest = { version = "0.11.23", default-features = false, optional = true }
scroll = { version = "0.12.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde = { version = "1.0.195", features = ["derive"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
signature = { version = "2.2.0", features = ["std"], optional = true }
thiserror = "1.0.56"
url = "2.5.0"
xml-rs = "0.8.19"
x509-certificate = "0.23.1"
xz2 = { version = "0.1.7", features = ["static"] }

[features]
default = ["signing"]
# Enable support for extracting the cryptographic signature in XAR archives.
signing = [
    "dep:bcder",
    "dep:cryptographic-message-syntax",
    "dep:rand",
    "dep:reqwest",
    "dep:signature",
]
