[package]
name = "apple-xar"
version = "0.20.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
rust-version = "1.88"
license = "MPL-2.0"
description = "XAR archive reading and writing"
keywords = ["apple", "xar"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"
readme = "README.md"

[dependencies]
base64 = "0.22.1"
bcder = { version = "0.7.6", optional = true }
bzip2 = "0.6.1"
cryptographic-message-syntax = { version = "0.28.0", optional = true }
digest = "0.10.7"
log = "0.4.29"
md-5 = "0.10.6"
flate2 = "1.1.5"
rand = { version = "0.8.5", optional = true }
reqwest = { version = "0.12.28", default-features = false, optional = true }
scroll = { version = "0.13.0", features = ["derive"] }
serde-xml-rs = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
signature = { version = "2.2.0", features = ["std"], optional = true }
thiserror = "2.0.17"
url = "2.5.7"
xml-rs = "0.8.28"
x509-certificate = "0.25.0"
xz2 = { version = "0.1.7", features = ["static"] }

[features]
default = ["signing"]
# Enable support for extracting the cryptographic signature in XAR archives.
signing = [
    "dep:bcder",
    "dep:cryptographic-message-syntax",
    "dep:rand",
    "dep:reqwest",
    "dep:signature",
]
