[package]
name = "cpio-archive"
version = "0.9.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "cpio archive reading and writing"
keywords = ["cpio"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"
readme = "README.md"

[dependencies]
chrono = "0.4.31"
is_executable = "1.0.1"
simple-file-manifest = "0.11.0"
thiserror = "1.0.56"
