[package]
name = "cpio-archive"
version = "0.10.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
rust-version = "1.86"
edition = "2021"
license = "MPL-2.0"
description = "cpio archive reading and writing"
keywords = ["cpio"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"
readme = "README.md"

[dependencies]
chrono = "0.4.41"
is_executable = "1.0.4"
simple-file-manifest = "0.11.0"
thiserror = "2.0.15"
